tests/neg/dup_local_name.scala
class Main {
  val main = () => {
    val x = 0
    val x = 1
    x + y
  }
}
